objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>CN_Able_to_generate_opportunity__c</fullName>
        <formula>AND( 
  OR(
    NOT(ISBLANK(AccountId)),
    NOT(ISBLANK(ContactId))
  ),
  ISPICKVAL( Status , &apos;Attended&apos;)
)</formula>
        <label>Able to generate opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CN_Type_Formula__c</fullName>
        <formula>IF(
  NOT(ISBLANK(AccountId)),
  &apos;Account&apos;,
  IF(
    NOT(ISBLANK( ContactId )),
    &apos;Contact&apos;,
    IF(NOT(ISBLANK( LeadId )),&apos;Lead&apos;,NULL )
  )
)</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_View__c</fullName>
        <formula>HYPERLINK(Id, &quot;View&quot;)</formula>
        <label>View</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByLeadOrContact</sharingModel>
    <validationRules>
        <fullName>CN_Prevent_NotOwner_Creation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  $Setup.Trigger_Switcher_Setting__c.EnableValidationRule__c,
  NOT(IF($Profile.Name = &quot;System Integration&quot;, TRUE, FALSE)),
  ISNEW(),
  NOT( Lead.CN_Is_From_Web_To_Lead__c ),
  Campaign.OwnerId &lt;&gt;  $User.Id 
)</errorConditionFormula>
        <errorMessage>You are not allowed to add campaign member to campaign.</errorMessage>
    </validationRules>
</CustomObject>